# db-connector-tool

./: .coverage.LENOVO-PC.pid15508.XMKVIKrx.Hrc0k62Y4bQh  .coveragerc  .gitignore  LICENSE.txt  README.md  TUTORIAL.md  gb_test.py  gbase8s_test.py  pyproject.toml  requirements.txt  simple_gbase8s_test.py  test.py  test_basic_functionality.py  test_batch.py  test_config_validation.py  test_crypto.py  test_input_validation.py  test_salt_validation.py  test_validators.py  verify_salt_validation.py
.test_app/: encryption.key  test_config.toml.backup.20260324_222246
.trae/documents/: crypto_optimization_plan.md  sqlalchemy_driver_optimization_plan.md
.trae/specs/code-review/: checklist.md  spec.md  tasks.md
db_connector/: __init__.py  cli.py  cli_enhanced.py  rich_cli.py
db_connector/core/: __init__.py  config.py  config_manager.py  connections.py  crypto.py  crypto_manager.py  database.py  exceptions.py
db_connector/drivers/: __init__.py  sqlalchemy_driver.py
db_connector/utils/: __init__.py  logger.py  logging_utils.py  path_helper.py  path_utils.py
examples/: basic_usage.py  cli_usage.py  multiple_databases.py
scripts/: setup_environment.py
src/db_connector_tool/: __about__.py  __init__.py  batch_manager.py  cli.py  cli_core.py
src/db_connector_tool/core/: __init__.py  config.py  config_security.py  connection_pool.py  connections.py  crypto.py  exceptions.py  key_manager.py  validators.py
src/db_connector_tool/drivers/: __init__.py  gbase8s_jdbc.py  sqlalchemy_driver.py
src/db_connector_tool/utils/: __init__.py  argparse_utils.py  logging_utils.py  path_utils.py  sqlparse_utils.py
tests/: __init__.py  connections_test.py  logging_utils_test.py  path_utils_test.py  simple_gbase8s_test.py  sqlalchemy_driver_test.py  test_batch_manager.py  test_cli.py  test_config.py  test_crypto.py  test_crypto_manager.py  test_database.py  test_integration.py  test_jaydebeapi.py  test_path_helper.py
tests/core/: test_config.py  test_config_coverage.py  test_config_security.py  test_connection_pool.py  test_connections.py  test_crypto.py  test_exceptions.py  test_key_manager.py  test_validators.py
tests/drivers/: test_gbase8s_jdbc.py  test_sqlalchemy_driver.py
tests/utils/: test_argparse_utils.py  test_logging_utils.py  test_path_utils.py  test_sqlparse_utils.py
